objects/Team_Release_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Release_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blocked_or_On_Hold_Controllers__c</fullName>
        <label>Blocked or On Hold - Controllers</label>
        <summarizedField>Key_Task_to_G_A__c.Blocked_or_On_Hold_Controllers__c</summarizedField>
        <summaryForeignKey>Key_Task_to_G_A__c.Team_Release_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Blocked_or_On_Hold_Dependents__c</fullName>
        <label>Blocked or On Hold - Dependents</label>
        <summarizedField>Key_Task_to_G_A__c.Blocked_or_On_Hold_Dependents__c</summarizedField>
        <summaryForeignKey>Key_Task_to_G_A__c.Team_Release_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Blocked_or_On_Hold_Key_Tasks__c</fullName>
        <label>Blocked or On Hold - Key Tasks</label>
        <summaryFilterItems>
            <field>Key_Task_to_G_A__c.Status__c</field>
            <operation>equals</operation>
            <value>On Hold, Blocked</value>
        </summaryFilterItems>
        <summaryForeignKey>Key_Task_to_G_A__c.Team_Release_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>(5 * ( FLOOR( ( Finish_Date_RUS__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Finish_Date_RUS__c - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( Start_Date_RUS__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Start_Date_RUS__c - DATE( 1900, 1, 8), 7 ) ) )
+
1</formula>
        <inlineHelpText>Number of Week Days</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finish_Date_RUS__c</fullName>
        <inlineHelpText>Maximum Finish Date of all Key Tasks</inlineHelpText>
        <label>Finish Date (RUS)</label>
        <summarizedField>Key_Task_to_G_A__c.Finish_Date__c</summarizedField>
        <summaryForeignKey>Key_Task_to_G_A__c.Team_Release_Plan__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LTTR_Finish__c</fullName>
        <formula>(5 * ( FLOOR( ( Finish_Date_RUS__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Finish_Date_RUS__c - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( Release_Plan__r.Planned_G_A_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Release_Plan__r.Planned_G_A_Date__c - DATE( 1900, 1, 8), 7 ) ) )</formula>
        <inlineHelpText>LTTR = Lead Time To Release.  Calculated in Week Days.  Negative Number is BEFORE Release; Positive Number is AFTER Release</inlineHelpText>
        <label>LTTR - Finish</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LTTR_Start__c</fullName>
        <formula>(5 * ( FLOOR( ( Start_Date_RUS__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Start_Date_RUS__c - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( Release_Plan__r.Planned_G_A_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Release_Plan__r.Planned_G_A_Date__c - DATE( 1900, 1, 8), 7 ) ) )</formula>
        <inlineHelpText>LTTR = Lead Time To Release.  Calculated in Week Days.  Negative Number is BEFORE Release; Positive Number is AFTER Release</inlineHelpText>
        <label>LTTR - Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release_Plan__c</fullName>
        <label>Release Plan</label>
        <referenceTo>Release_Plan__c</referenceTo>
        <relationshipLabel>Team - Release Plans</relationshipLabel>
        <relationshipName>Team_Release_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date_RUS__c</fullName>
        <inlineHelpText>Minimum Start Date of all Key Tasks</inlineHelpText>
        <label>Start Date (RUS)</label>
        <summarizedField>Key_Task_to_G_A__c.Start_Date__c</summarizedField>
        <summaryForeignKey>Key_Task_to_G_A__c.Team_Release_Plan__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Release_Planning_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Count_Key_Tasks__c</fullName>
        <label>Total Count - Key Tasks</label>
        <summaryForeignKey>Key_Task_to_G_A__c.Team_Release_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Team - Release Plan</label>
    <nameField>
        <label>Team - Release Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team - Release Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>